# e2b-mcp-py

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DOCKER-MCP-EXAMPLES.md  DOCKER-MCP-GUIDE.md  DOCKER-MCP-SUMMARY.md  Dockerfile.gemini  GEMINI-QUICKSTART.md  GEMINI.md  GOOGLE-DRIVE-MCP-SETUP.md  LANGGRAPH_MIGRATION_SUMMARY.md  LICENSE  MIGRATION_PLAN.md  README.md  SETUP.md  TROUBLESHOOTING.md  VISION.md  check_anthropic_key.py  check_keys.py  debug_e2b.py  deep_agent.py  deploy.py  diagnose_github.py  docker-compose.gemini.yml  e2b_tools.py  evaluate_dakota.py  example_mcp_builder.py  examples.py  inspect_sandbox.py  langgraph_agent.py  legacy_deep_agent.py  legacy_main.py  main.py  mcp_build_output.txt  mcp_builder_tools.py  pyproject.toml  run-gemini.ps1  run-gemini.sh  (+7 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
