[project]
name = "e2b-mcp-py"
version = "0.2.0"
description = "Deep Agents implementation with E2B sandbox integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "e2b>=2.3.4",
    "python-dotenv>=1.1.1",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-mcp-adapters>=0.0.6",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]
